# stock-market-pipeline

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1_bug_report.md  2_feature_request.md  3_data_quality_incident.md  4_documentation.md  5_refactor_tech_debt.md  6_performance_tunning.md  7_iac_cicd.md  8_backfill_migration.md
.github/workflows/: ci.yml
airflow/dags/: dag_delta_maintenance.py  dag_stock_metadata.py  dag_stock_metrics.py  dag_stock_prices.py
docker/: Dockerfile  docker-compose.yml
soda/: configuration.yml  run_silver_scans.py
soda/contracts/: gold_companies_contract.yml  gold_metrics_contract.yml  gold_performance_contract.yml  gold_prices_contract.yml  gold_prices_converted_contract.yml  silver_metadata_contract.yml  silver_metrics_contract.yml  silver_prices_contract.yml
src/db_init/: init.sql  migration_20260623_fact_company_metrics.sql  migration_20260624_exchange_rate.sql  migration_v2_scd.sql
src/producer/: config.py  generator.py  metadata_generator.py  tickers.py
src/quality/: soda_validator.py
src/streaming/: bronze.py  bronze_metadata.py  gold.py  maintenance.py  silver.py  silver_metadata.py  spark_session.py  utils.py
src/utils/: alerts.py  dag_helpers.py  logger.py
tests/: __init__.py  conftest.py
tests/dags/: test_dag_validation.py
tests/producer/: __init__.py  test_generator.py  test_metadata_generator.py  test_tickers.py
tests/streaming/: __init__.py  test_bronze.py  test_bronze_metadata.py  test_gold.py  test_maintenance.py  test_silver.py  test_silver_metadata.py  test_utils.py
tests/utils/: test_alerts.py
