[project]
name = "stock-market-pipeline"
version = "1.0.0"
description = "Stock market ingestion and processing pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yfinance==1.3.0",
    "pandas==3.0.3",
    "lxml==6.1.0",
    "pyspark==4.1.1",
    "delta-spark==4.2.0",
    "clickhouse-connect>=1.3.0",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "pyarrow==24.0.0",
    "loguru==0.7.3",
    "apache-airflow==3.2.2",
    "psycopg2-binary>=2.9.12",
    "apache-airflow-providers-postgres>=6.7.1",
    "apache-airflow-providers-fab>=3.6.5",
    "apache-airflow-providers-clickhousedb>=1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.15.15",
]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    "data",
    "spark-warehouse",
    "metastore_db",
]

[tool.ruff.lint]
select = [
    "D",      # pydocstyle (Docstring style checks)
    "E",      # pycodestyle (Style violations/errors)
    "W",      # pycodestyle (Style warnings)
    "F",      # Pyflakes (Core error checks)
    "G",      # flake8-logging-format (Logging formatting)
    "I",      # isort (Import sorting)
    "C90",    # mccabe (Complexity checker)
    "B",      # flake8-bugbear (Common bug prevention)
    "UP",     # pyupgrade (Syntax upgrade to modern Python)
    "N",      # pep8-naming (Naming conventions)
    "S",      # flake8-bandit (Security vulnerability checks)
    "PT",     # flake8-pytest-style (Pytest best practices)
    "ANN",    # flake8-annotations (Type annotations checks)
    "ERA",    # eradicate (Removes commented-out code)
    "PTH",    # flake8-use-pathlib (Pathlib recommendations)
    "RUF",    # Ruff-specific rules
    "SIM",    # flake8-simplify (Simplifying code structure)
    "TCH",    # flake8-type-checking (Type-checking block alignment)
    "PL",     # Pylint (Ruff implementation of Pylint checks)
    "LOG",    # flake8-logging (Standard logging checks)
    "RET",    # flake8-return (Return statement styling)
    "PERF",   # Perflint (Performance checks)
    "PGH",    # pygrep-hooks (Custom checks like raw type: ignore bans)
    "PD",     # pandas-vet (Pandas best practices)
    "T10",    # flake8-debugger (Catches left-over debugger imports)
    "T20",    # flake8-print (Bans print/pprint in production)
    "AIR",    # Ruff Airflow rules (AIR prefix)
]
ignore = [
    "E501",   # Line too long (handled automatically by the formatter)
    "COM812", # Missing trailing comma (conflict with Ruff formatter)
    "ISC001", # Implicit string concatenation (conflict with Ruff formatter)
    "G004",   # Logging statement uses f-string (allows readable f-string logs)
    "D100",   # Missing docstring in public module (module-level header docstrings)
    "D104",   # Missing docstring in public package (empty __init__.py warnings)
    "ANN204", # Missing return type annotation for special method __init__
    "PTH123", # open() should be replaced by Path.open() (allows standard built-in open())
    "PD013",  # pandas-vet stack warning (prefers melt, but stack is appropriate here)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert used (required for standard pytest assertions)
    "S105",    # hardcoded password string (dummy credentials used in mock tests)
    "S106",    # hardcoded password in function call (dummy credentials passed in tests)
    "PT012",   # pytest.raises block should contain a single simple statement
    "ANN",     # type annotations (omitted for tests to reduce verbosity)
    "D",       # docstrings (not strictly required for all test cases)
    "SIM117",  # use a single with statement (prefers nested blocks in some test cases)
    "PLC0415", # import should be at the top-level (inline imports needed for mocking/isolation)
    "PLR2004", # magic value in comparison (common and expected in assert statements)
]
"airflow/dags/**/*.py" = [
    "PLC0415", # import should be at the top-level (to avoid importing PySpark/heavy dependencies on DAG parse time)
    "ANN401",  # dynamically typed expressions (typing.Any) (allowed for context dicts)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
    "ignore:.*copy keyword is deprecated.*",
]

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true

